force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/Exl_Exclusion_Management_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Exclusion Management Settings</label>
    <pluralLabel>Exclusion Management Settings</pluralLabel>
</CustomObject>