force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/Case_CloseCaseReason_Paired__c.field-meta.xml
<CustomField>
    <fullName>Case_CloseCaseReason_Paired__c</fullName>
    <label>Case_CloseCaseReason_Paired</label>
    <length>255</length>
    <type>Text</type>
</CustomField>