force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/Case_Origin_TimeBased__c.field-meta.xml
<CustomField>
    <fullName>Case_Origin_TimeBased__c</fullName>
    <label>Case_Origin_TimeBased</label>
    <length>100</length>
    <type>Text</type>
</CustomField>