force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/Case_RecordType_ApplyContravention__c.field-meta.xml
<CustomField>
    <fullName>Case_RecordType_ApplyContravention__c</fullName>
    <label>Case_RecordType_ApplyContravention</label>
    <length>255</length>
    <type>Text</type>
</CustomField>