force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/Case_RecordTypeName_RevokeExclusion__c.field-meta.xml
<CustomField>
    <fullName>Case_RecordTypeName_RevokeExclusion__c</fullName>
    <label>Case_RecordTypeName_RevokeExclusion</label>
    <length>100</length>
    <type>Text</type>
</CustomField>