force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/Case_RevocationStatus_New__c.field-meta.xml
<CustomField>
    <fullName>Case_RevocationStatus_New__c</fullName>
    <label>Case_RevocationStatus_New</label>
    <length>50</length>
    <type>Text</type>
</CustomField>