force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/Case_Status_PendingApproval__c.field-meta.xml
<CustomField>
    <fullName>Case_Status_PendingApproval__c</fullName>
    <label>Case_Status_PendingApproval</label>
    <length>100</length>
    <type>Text</type>
</CustomField>