force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/Case_Type_Revoke__c.field-meta.xml
<CustomField>
    <fullName>Case_Type_Revoke__c</fullName>
    <label>Case_Type_Revoke</label>
    <length>100</length>
    <type>Text</type>
</CustomField>