force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/Exclusion_POELength_24h__c.field-meta.xml
<CustomField>
    <fullName>Exclusion_POELength_24h__c</fullName>
    <label>Exclusion_POELength_24h</label>
    <length>10</length>
    <type>Text</type>
</CustomField>