force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/Exclusion_POELength_7d__c.field-meta.xml
<CustomField>
    <fullName>Exclusion_POELength_7d__c</fullName>
    <label>Exclusion_POELength_7d</label>
    <length>10</length>
    <type>Text</type>
</CustomField>