force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/Exclusion_POEType_ExternalExclusion__c.field-meta.xml
<CustomField>
    <fullName>Exclusion_POEType_ExternalExclusion__c</fullName>
    <label>Exclusion_POEType_ExternalExclusion</label>
    <length>100</length>
    <type>Text</type>
</CustomField>