force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/Exclusion_Status_ActivationFailed__c.field-meta.xml
<CustomField>
    <fullName>Exclusion_Status_ActivationFailed__c</fullName>
    <label>Exclusion_Status_ActivationFailed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>