force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/Exclusion_Status_Active__c.field-meta.xml
<CustomField>
    <fullName>Exclusion_Status_Active__c</fullName>
    <label>Exclusion_Status_Active</label>
    <length>255</length>
    <type>Text</type>
</CustomField>