force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/Exclusion_Status_Complete__c.field-meta.xml
<CustomField>
    <fullName>Exclusion_Status_Complete__c</fullName>
    <label>Exclusion_Status_Complete</label>
    <length>255</length>
    <type>Text</type>
</CustomField>