force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/Exclusion_Status_RevocationPending__c.field-meta.xml
<CustomField>
    <fullName>Exclusion_Status_RevocationPending__c</fullName>
    <label>Exclusion_Status_RevocationPending</label>
    <length>100</length>
    <type>Text</type>
</CustomField>