force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/Flow_ApplyContraventionAgreeMsg__c.field-meta.xml
<CustomField>
    <fullName>Flow_ApplyContraventionAgreeMsg__c</fullName>
    <label>Flow_ApplyContraventionAgreeMsg</label>
    <type>TextArea</type>
</CustomField>