force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/Flow_ApplyContraventionDeclarationMsg__c.field-meta.xml
<CustomField>
    <fullName>Flow_ApplyContraventionDeclarationMsg__c</fullName>
    <label>Flow_ApplyContraventionDeclarationMsg</label>
    <type>TextArea</type>
</CustomField>