force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/Flow_ApplyContraventionSuccessMsg__c.field-meta.xml
<CustomField>
    <fullName>Flow_ApplyContraventionSuccessMsg__c</fullName>
    <label>Flow_ApplyContraventionSuccessMsg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>