force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/Flow_CaptureDetails_IssuedByErrorMsg__c.field-meta.xml
<CustomField>
    <fullName>Flow_CaptureDetails_IssuedByErrorMsg__c</fullName>
    <label>Flow_CaptureDetails_IssuedByErrorMsg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>