force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/Flow_CaseApproval_AMLExclusion_Subject__c.field-meta.xml
<CustomField>
    <fullName>Flow_CaseApproval_AMLExclusion_Subject__c</fullName>
    <label>Flow_CaseApproval_AMLExclusion_Subject</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>