force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/Flow_CaseRevocationOutcome__c.field-meta.xml
<CustomField>
    <fullName>Flow_CaseRevocationOutcome__c</fullName>
    <label>Flow_CaseRevocationOutcome</label>
    <length>50</length>
    <type>Text</type>
</CustomField>