force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/Flow_ExclusionOrder_DuplicateExl_Behavio__c.field-meta.xml
<CustomField>
    <fullName>Flow_ExclusionOrder_DuplicateExl_Behavio__c</fullName>
    <label>Flow_ExclusionOrder_DuplicateExl_Behavio</label>
    <length>100</length>
    <type>Text</type>
</CustomField>