force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/Flow_LicenseValidation_ErrorMsg__c.field-meta.xml
<CustomField>
    <fullName>Flow_LicenseValidation_ErrorMsg__c</fullName>
    <label>Flow_LicenseValidation_ErrorMsg</label>
    <type>TextArea</type>
</CustomField>