force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/Flow_NotSelfExclusion_RevocDateLimit__c.field-meta.xml
<CustomField>
    <fullName>Flow_NotSelfExclusion_RevocDateLimit__c</fullName>
    <label>Flow_NotSelfExclusion_RevocDateLimit</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>