force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/Flow_OnWOLI_RevokeExclusion_ExcluStatus__c.field-meta.xml
<CustomField>
    <fullName>Flow_OnWOLI_RevokeExclusion_ExcluStatus__c</fullName>
    <label>Flow_OnWOLI_RevokeExclusion_ExcluStatus</label>
    <length>100</length>
    <type>Text</type>
</CustomField>