force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/Flow_OnWOLI_RevokeExclusion_WOLIStatus__c.field-meta.xml
<CustomField>
    <fullName>Flow_OnWOLI_RevokeExclusion_WOLIStatus__c</fullName>
    <label>Flow_OnWOLI_RevokeExclusion_WOLIStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>