force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/Flow_OpenRatingStatus__c.field-meta.xml
<CustomField>
    <fullName>Flow_OpenRatingStatus__c</fullName>
    <label>Flow_OpenRatingStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>