force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/Flow_OpenRatingStatus_SuccessMsg__c.field-meta.xml
<CustomField>
    <fullName>Flow_OpenRatingStatus_SuccessMsg__c</fullName>
    <label>Flow_OpenRatingStatus_SuccessMsg</label>
    <type>TextArea</type>
</CustomField>