force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/Flow_OpenRatingStatus_WOStatus__c.field-meta.xml
<CustomField>
    <fullName>Flow_OpenRatingStatus_WOStatus__c</fullName>
    <label>Flow_OpenRatingStatus_WOStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>