force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/Flow_PostLnGNotification_ExtHeaderText__c.field-meta.xml
<CustomField>
    <fullName>Flow_PostLnGNotification_ExtHeaderText__c</fullName>
    <label>Flow_PostLnGNotification_ExtHeaderText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>