force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/Flow_RestrictionJunctionCreat_EnfoStatus__c.field-meta.xml
<CustomField>
    <fullName>Flow_RestrictionJunctionCreat_EnfoStatus__c</fullName>
    <label>Flow_RestrictionJunctionCreat_EnfoStatus</label>
    <length>50</length>
    <type>Text</type>
</CustomField>