force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/Flow_RestrictionJunctionCreation_Entry__c.field-meta.xml
<CustomField>
    <fullName>Flow_RestrictionJunctionCreation_Entry__c</fullName>
    <description>Used for &quot;Restriction and ExclRest Junction Record Creation&quot; entry criteria, Restriction Status value</description>
    <label>Flow_RestrictionJunctionCreation_Entry</label>
    <length>100</length>
    <type>Text</type>
</CustomField>