force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/FLOW_RevocationCaptureDetails_Confirm__c.field-meta.xml
<CustomField>
    <fullName>FLOW_RevocationCaptureDetails_Confirm__c</fullName>
    <label>FLOW_RevocationCaptureDetails_Confirm</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>