force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/Flow_RevocationDateDaysLimit__c.field-meta.xml
<CustomField>
    <fullName>Flow_RevocationDateDaysLimit__c</fullName>
    <label>Flow_RevocationDateDaysLimit</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>