force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/Flow_RevokeCase_AMLPEApprovalMsg__c.field-meta.xml
<CustomField>
    <fullName>Flow_RevokeCase_AMLPEApprovalMsg__c</fullName>
    <label>Flow_RevokeCase_AMLPEApprovalMsg</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>