force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/Flow_SelectPair_ConfirmationMsg__c.field-meta.xml
<CustomField>
    <fullName>Flow_SelectPair_ConfirmationMsg__c</fullName>
    <label>Flow_SelectPair_ConfirmationMsg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>