force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/General_ApprovalStep_Approve__c.field-meta.xml
<CustomField>
    <fullName>General_ApprovalStep_Approve__c</fullName>
    <label>General_ApprovalStep_Approve</label>
    <length>255</length>
    <type>Text</type>
</CustomField>