force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/General_CaseUpdate_SucessMsg__c.field-meta.xml
<CustomField>
    <fullName>General_CaseUpdate_SucessMsg__c</fullName>
    <label>General_CaseUpdate_SucessMsg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>