force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/General_CreateCase_SuccessMsg__c.field-meta.xml
<CustomField>
    <fullName>General_CreateCase_SuccessMsg__c</fullName>
    <label>General_CreateCase_SuccessMsg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>