force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/General_ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>General_ErrorMessage__c</fullName>
    <label>General_ErrorMessage</label>
    <type>TextArea</type>
</CustomField>