force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/General_Jurisdiction_NSW__c.field-meta.xml
<CustomField>
    <fullName>General_Jurisdiction_NSW__c</fullName>
    <label>General_Jurisdiction_NSW</label>
    <length>3</length>
    <type>Text</type>
</CustomField>