force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/General_Jurisdiction_Qld__c.field-meta.xml
<CustomField>
    <fullName>General_Jurisdiction_Qld__c</fullName>
    <label>General_Jurisdiction_Qld</label>
    <length>3</length>
    <type>Text</type>
</CustomField>