force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/General_RequireFields_ErrorMsg__c.field-meta.xml
<CustomField>
    <fullName>General_RequireFields_ErrorMsg__c</fullName>
    <label>General_RequireFields_ErrorMsg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>