force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/General_RevocationReminderDays__c.field-meta.xml
<CustomField>
    <fullName>General_RevocationReminderDays__c</fullName>
    <label>General_RevocationReminderDays</label>
    <length>5</length>
    <type>Text</type>
</CustomField>