force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/General_Revoke_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>General_Revoke_Confirmation__c</fullName>
    <label>General_Revoke_Confirmation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>