force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/General_RevokeCaseExists_ErrorMsg__c.field-meta.xml
<CustomField>
    <fullName>General_RevokeCaseExists_ErrorMsg__c</fullName>
    <label>General_RevokeCaseExists_ErrorMsg</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>