force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/General_RevokeDocument_StopFlag__c.field-meta.xml
<CustomField>
    <fullName>General_RevokeDocument_StopFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>General_RevokeDocument_StopFlag</label>
    <type>Checkbox</type>
</CustomField>