force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/General_RevokeScheduled_WarningMsg__c.field-meta.xml
<CustomField>
    <fullName>General_RevokeScheduled_WarningMsg__c</fullName>
    <label>General_RevokeScheduled_WarningMsg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>