force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/General_WOLI_UpdateSuccess__c.field-meta.xml
<CustomField>
    <fullName>General_WOLI_UpdateSuccess__c</fullName>
    <label>General_WOLI_UpdateSuccess</label>
    <length>255</length>
    <type>Text</type>
</CustomField>