force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/Threshold_Date__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Date__c</fullName>
    <label>Threshold Date</label>
    <type>Date</type>
</CustomField>