force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/WO_Status_Completed__c.field-meta.xml
<CustomField>
    <fullName>WO_Status_Completed__c</fullName>
    <label>WO_Status_Completed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>