force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/WO_Type_RevokeExclusionQLD__c.field-meta.xml
<CustomField>
    <fullName>WO_Type_RevokeExclusionQLD__c</fullName>
    <label>WO_Type_RevokeExclusionQLD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>