force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/WOLI_DeliveryStatus_DeliveredSuccessfull__c.field-meta.xml
<CustomField>
    <fullName>WOLI_DeliveryStatus_DeliveredSuccessfull__c</fullName>
    <label>WOLI_DeliveryStatus_DeliveredSuccessfull</label>
    <length>255</length>
    <type>Text</type>
</CustomField>