force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/WOLI_DeliveryStatus_HandedSuccessfully__c.field-meta.xml
<CustomField>
    <fullName>WOLI_DeliveryStatus_HandedSuccessfully__c</fullName>
    <label>WOLI_DeliveryStatus_HandedSuccessfully</label>
    <length>100</length>
    <type>Text</type>
</CustomField>