force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/WOLI_HandoverType_Mail__c.field-meta.xml
<CustomField>
    <fullName>WOLI_HandoverType_Mail__c</fullName>
    <label>WOLI_HandoverType_Mail</label>
    <length>15</length>
    <type>Text</type>
</CustomField>