force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/WOLI_LineItemType_DuplicateExclusion__c.field-meta.xml
<CustomField>
    <fullName>WOLI_LineItemType_DuplicateExclusion__c</fullName>
    <label>WOLI_LineItemType_DuplicateExclusion</label>
    <length>100</length>
    <type>Text</type>
</CustomField>