force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/WOLI_LineItemType_GenerateDocument__c.field-meta.xml
<CustomField>
    <fullName>WOLI_LineItemType_GenerateDocument__c</fullName>
    <label>WOLI_LineItemType_GenerateDocument</label>
    <length>255</length>
    <type>Text</type>
</CustomField>