force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/WOLI_Status_Completed__c.field-meta.xml
<CustomField>
    <fullName>WOLI_Status_Completed__c</fullName>
    <label>WOLI_Status_Completed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>