force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/WOLI_Status_InProgress__c.field-meta.xml
<CustomField>
    <fullName>WOLI_Status_InProgress__c</fullName>
    <label>WOLI_Status_InProgress</label>
    <length>50</length>
    <type>Text</type>
</CustomField>