force-app/main/default/objects/Exl_Exclusion_Management_Settings__mdt/fields/WOLI_Status_Rejected__c.field-meta.xml
<CustomField>
    <fullName>WOLI_Status_Rejected__c</fullName>
    <label>WOLI_Status_Rejected</label>
    <length>100</length>
    <type>Text</type>
</CustomField>